--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
 fastapi
 joblib
-numpy
 pydantic
 requests
+catboost
+dowhy
+fastapi
+imblearn
+joblib
+lightgbm
+matplotlib
+mplcyberpunk
+numpy
+pandas
+polars
+pydantic
+requests
+scikit-learn
+scipy
+seaborn
+shap
+skimpy
+statsmodels
+tqdm
 uvicorn
+xgboost
